added addtional style to the body

--- a/style.css
+++ b/style.css
@@ -17,3 +17,20 @@ header {
     padding: 10px;
     margin: 10px;
 }
+.past {
+    background-color: #d3d3d3;
+}
+
+.present {
+    background-color: #ff6961;
+}
+
+.future {
+    background-color: #77dd77;
+}
+
+textarea {
+    width: 80%;
+    border: none;
+    resize: none;
+}
